implementado pero tira error interno nose puede ser q no estaba con la bd abierta
